# zkprediction

./: .deployment.json  .gitignore  Bugs.md  Cargo.toml  DESIGN.md  DOCUMENTATION.md  QUICKSTART.md  README.md  demo.rs  install_nargo.sh
circuits/prediction_settle/: Nargo.toml  Prover.toml
circuits/prediction_settle/src/: main.nr
contracts/prediction/: Cargo.toml
contracts/prediction/src/: lib.rs  test.rs  verification.rs
contracts/prediction/test_snapshots/: verify_claim_proof_succeeds.1.json
contracts/prediction/tests/: integration_tests.rs
docs/: 01-circuit-noir-vk.md  02-contract-and-testnet.md  03-frontend-contract-integration.md  04-ultrahonk-verifier.md  05-ultrahonk-integration.md
scripts/: deploy_testnet.sh  e2e_test_settle.sh  generate_proof_wsl.sh  list_markets.sh  testnet_claim.sh  testnet_flow.sh
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
web/.next/cache/: .tsbuildinfo
web/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json
web/.next/server/app/: _not-found.html  _not-found.rsc  index.html  page.js  page_client-reference-manifest.js
web/.next/server/chunks/: 819.js
web/.next/server/pages/: 500.html
web/.next/static/chunks/: main-957ab6888c3c8e89.js
web/.next/static/css/: da31118c7fb82662.css
web/.next/types/app/: layout.ts  page.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: BettingModal.tsx  ClaimRewardModal.tsx  CreatePredictionForm.tsx  Header.tsx  MyBets.tsx  PredictionCard.tsx  Stats.tsx  index.ts
web/src/lib/: abi.ts  commitment.ts  contract.ts  index.ts  store.ts  wallet.ts
web/src/types/: index.ts
(+20 files in other folders)
