[package]
name = "prediction"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
default = ["nethermind-verifier"]
static-vk = []
nethermind-verifier = ["dep:ultrahonk-soroban-verifier"]

[dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["alloc"] }
soroban-env-host = "26.1.3"
ultrahonk-soroban-verifier = { git = "https://github.com/NethermindEth/rs-soroban-ultrahonk", rev = "661db07200f890b1bd9a7349ed787c70a706dd12", package = "ultrahonk_soroban_verifier", default-features = false, optional = true }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
