[package]
name = "prediction"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
default = []
static-vk = []

[dependencies]
soroban-sdk = { version = "26.1.0", default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../../yugocabrio-rs-soroban-ultrahonk/crates/ultrahonk-soroban-verifier" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
